--- a/coordinates/style.css
+++ b/coordinates/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    margin: 0;
 }
 
 .line {
@@ -10,19 +11,15 @@ body {
 .horozontal {
     width: 100%;
     height: 1px;
-    top: 50%;
 }
 
 .vertical {
     height: 100%;
     width: 1px;
-    left: 50%;
 }
 
 .target {
     position: absolute;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -30,7 +27,5 @@ body {
     color: white;
     position: absolute;
     font-size: 38px;
-    top: 50%;
-    left: 50%;
-    transform: translate(20px, 20px);
+    margin: 20px;
 }
